<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.judahzone</groupId>
  <artifactId>JudahZone</artifactId>
  <version>0.1</version>
  <packaging>jar</packaging>

  <name>JudahZone</name>
  <url>http://maven.apache.org</url>

 <properties>
    <maven.compiler.source>1.11</maven.compiler.source>
    <maven.compiler.target>1.11</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

<repositories>
<repository>
    <id>clojars_repo</id>
    <url>https://clojars.org/repo/</url>
  </repository>
</repositories>

<dependencies>
	<!-- Jack Support -->
  	<dependency>
    	<groupId>net.java.dev.jna</groupId>
      	<artifactId>jna</artifactId>
      	<version>[5.0.0,6.0)</version>
      	<scope>compile</scope>
    </dependency>
    <dependency>
        <groupId>org.jaudiolibs</groupId>
        <artifactId>jnajack</artifactId>
        <version>1.4.0</version>
        <scope>provided</scope>
    </dependency>
    <dependency>
        <groupId>org.jaudiolibs</groupId>
        <artifactId>audioservers-api</artifactId>
       	<version>2.0.0</version>
        <scope>provided</scope>
    </dependency>
    
    <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>1.16.6</version>
        <scope>provided</scope>
    </dependency>

    <dependency>
	    <groupId>org.apache.jena</groupId>
	    <artifactId>apache-jena-libs</artifactId>
	    <type>pom</type>
	    <version>3.9.0</version>
    </dependency>

	<dependency>
	    <groupId>com.illposed.osc</groupId>
	    <artifactId>javaosc-core</artifactId>
	    <version>0.6</version>
	</dependency>
	
    <dependency>
    	<groupId>com.github.axet</groupId>
    	<artifactId>TarsosDSP</artifactId>
	    <version>2.4-1</version>
	</dependency>

</dependencies>
  
</project>
